# 0-1claude

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_PROMPT.md  SPLIT_PROMPT.md  SPLIT_PROMPT_B.md  TEST_PLAN.md  app.py  config.py  login_system.py  mes1.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.runtime/: packages.txt
.runtime/memory/: MEMORY.md  connect-docs-mcp-server.md  count-functions-per-py-file.md  create-todo-tasks.md  list-python-files-command.md  plan-logging-system-todos.md  reminder-one-time-exercise.md  reminder-update-todo-write.md  search-docs-agent-loop.md  user-preference-tabs.md  wait-30s-check-inbox.md
.runtime/tasks/: task_1781883166_5018.json  task_1781883168_0101.json  task_1781883170_0058.json  task_1781883729_4676.json  task_1781883731_8911.json  task_1781883733_9857.json  task_1781884440_8742.json  task_1781884442_3882.json
.runtime/transcripts/: transcript_1781882674.jsonl
api/: requirements.txt  server.py  session_store.py
core/: compression.py  engine.py  prompt.py  recovery.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: chat.js
frontend/src/components/: ChatInput.vue  ChatSidebar.vue  ChatWindow.vue  MessageBubble.vue  (+2 more)
runtime/: bus.py  hooks.py  protocol.py  teammate.py  worktree.py
services/: background.py  cron.py  memory.py  skills.py  tasks.py
skills/code-review/: SKILL.md
skills/git-commit/: SKILL.md
skills/project-init/: SKILL.md
tests/: conftest.py  test_background.py  test_bus.py  test_config.py  test_cron.py  test_hooks.py  test_integration.py  test_mcp.py  test_protocol.py  test_recovery.py  test_skills.py  test_tasks.py  test_utils.py  test_worktree.py
tools/: builtin.py  mcp.py  subagent.py  team.py
(+3 files in other folders)
